[gd_scene load_steps=17 format=2]

[ext_resource path="res://imagens/pomodoro-bloco_resample.png" type="Texture" id=1]
[ext_resource path="res://tileset/chao.tres" type="TileSet" id=2]
[ext_resource path="res://Branch/ParallaxBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cenas/plataformaMovel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Script/plataformaMovel2.gd" type="Script" id=5]
[ext_resource path="res://tileset/floor.tres" type="TileSet" id=6]
[ext_resource path="res://imagens/pomodoro-bloco_resample02.png" type="Texture" id=7]
[ext_resource path="res://tileset/industrial.tres" type="TileSet" id=8]
[ext_resource path="res://Branch/Monstro.tscn" type="PackedScene" id=9]
[ext_resource path="res://Cenas/popUpPomodoro.tscn" type="PackedScene" id=10]
[ext_resource path="res://efeito sonoros/Game Button Sounds Pack - Free Sounds [TubeRipper (mp3cut.net) (1).mp3" type="AudioStream" id=11]
[ext_resource path="res://Cenas/PassagemKanban.tscn" type="PackedScene" id=12]
[ext_resource path="res://Script/Cena2.gd" type="Script" id=15]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "new_default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26, 0.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 41, 37 )

[node name="Cena2" type="Node2D"]
script = ExtResource( 15 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 983023, 0, 0, 1114098, 0, 0, 1114107, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048619, 0, 0, 1048620, 0, 0, 1048621, 0, 0, 1048622, 0, 0, 1048623, 0, 0, 1048624, 0, 0, 1048625, 0, 0, 1048626, 0, 0, 1048627, 0, 0, 1048628, 0, 0, 1048629, 0, 0, 1048630, 0, 0, 1048631, 0, 0, 1048632, 0, 0, 1048633, 0, 0, 1048634, 0, 0, 1048635, 0, 0, 1048636, 0, 0, 1048637, 0, 0, 1048638, 0, 0, 1048639, 0, 0, 1048640, 0, 0, 1048641, 0, 0, 1048642, 0, 0, 1048643, 0, 0, 1245178, 0, 0, 1179674, 0, 0, 1179681, 0, 0, 1179715, 0, 0, 1310709, 0, 0, 1245217, 0, 0, 1245251, 0, 0 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 3 )]

[node name="plataforma_movel" parent="." instance=ExtResource( 4 )]
position = Vector2( -744, 562 )

[node name="plataforma_movel2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1097, 517 )
script = ExtResource( 5 )
horizontal = true

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 983020, 3, 0, 983021, 3, 0, 983022, 3, 0, 983023, 3, 0, 1048556, 3, 0, 1048557, 3, 0, 1048558, 3, 0, 1048559, 3, 0, 1114092, 3, 0, 1114093, 3, 0, 1114094, 3, 0, 1114095, 3, 0, 1114096, 3, 0, 1114097, 3, 0, 1114098, 3, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048606, 1, 0, 1048607, 1, 0, 1179628, 3, 0, 1179629, 3, 0, 1179630, 3, 0, 1179631, 3, 0, 1179632, 3, 0, 1179633, 3, 0, 1179634, 3, 0, 1179635, 3, 0, 1179636, 3, 0, 1179637, 3, 0, 1245164, 3, 0, 1245165, 3, 0, 1245166, 3, 0, 1245167, 3, 0, 1245168, 3, 0, 1245169, 3, 0, 1245170, 3, 0, 1245171, 3, 0, 1245172, 3, 0, 1245173, 3, 0, 1245178, 3, 0, 1179674, 3, 0, 1310701, 3, 0, 1310702, 3, 0, 1310703, 3, 0, 1310704, 3, 0, 1310705, 3, 0, 1310706, 3, 0, 1310707, 3, 0, 1310708, 3, 0, 1310709, 3, 0, 1310714, 3, 0, 1376215, 3, 0, 1376216, 3, 0, 1376217, 3, 0, 1376218, 3, 0, 1376219, 3, 0, 1376220, 3, 0, 1376221, 3, 0, 1376222, 3, 0, 1376223, 3, 0, 1376224, 3, 0, 1376225, 3, 0, 1376226, 3, 0, 1376227, 3, 0, 1376228, 3, 0, 1376229, 3, 0, 1376230, 3, 0, 1376231, 3, 0, 1376232, 3, 0, 1376233, 3, 0, 1376234, 3, 0, 1376235, 3, 0, 1376236, 3, 0, 1376237, 3, 0, 1376238, 3, 0, 1376239, 3, 0, 1376240, 3, 0, 1376241, 3, 0, 1376242, 3, 0, 1376243, 3, 0, 1376244, 3, 0, 1376245, 3, 0, 1376250, 3, 0, 1310763, 3, 0 )

[node name="Bloco_Tomate" type="KinematicBody2D" parent="."]
position = Vector2( -2383, -107 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bloco_Tomate"]
position = Vector2( 1796, 315 )
scale = Vector2( 0.105932, 0.107752 )
frames = SubResource( 2 )
playing = true

[node name="Area2D" type="Area2D" parent="Bloco_Tomate"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bloco_Tomate/Area2D"]
position = Vector2( 1797, 352 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bloco_Tomate"]
position = Vector2( 1796, 314 )
shape = SubResource( 4 )

[node name="TileMap3" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 32, 32 )
show_collision = true
format = 1
tile_data = PoolIntArray( 655380, 6, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 2, 0, 786446, 6, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 2, 0, 917484, 6, 0, 917485, 1, 0, 917486, 1, 0, 917487, 2, 0, 983020, -1073741823, 0, 983021, -1073741821, 0, 983022, -1073741821, 0, 983023, -1610612735, 0, 917510, 6, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 2, 0, 1048556, -1073741823, 0, 1048557, -1073741821, 0, 1048558, -1073741821, 0, 1048559, -1073741820, 0, 1048560, 1, 0, 1048561, 1, 0, 1048562, 1, 0, 1114092, -1073741823, 0, 1114093, -1073741821, 0, 1114094, -1073741821, 0, 1114095, -1073741821, 0, 1114096, -1073741821, 0, 1114097, -1073741821, 0, 1114098, 4, 0, 1114099, 1, 0, 1114100, 1, 0, 1114101, 2, 0, 1114106, 6, 0, 1114107, 1, 0, 1114108, 1, 0, 1114109, 1, 0, 1114110, 1, 0, 1114111, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 2, 0, 1048602, 6, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048606, 1, 0, 1048607, 1, 0, 1048608, 1, 0, 1048609, 2, 0, 1048619, 6, 0, 1048620, 1, 0, 1048621, 1, 0, 1048622, 1, 0, 1048623, 1, 0, 1048624, 1, 0, 1048625, 1, 0, 1048626, 1, 0, 1048627, 1, 0, 1048628, 1, 0, 1048629, 1, 0, 1048630, 1, 0, 1048631, 1, 0, 1048632, 1, 0, 1048633, 1, 0, 1048634, 1, 0, 1048635, 1, 0, 1048636, 1, 0, 1048637, 1, 0, 1048638, 1, 0, 1048639, 1, 0, 1048640, 1, 0, 1048641, 1, 0, 1048642, 1, 0, 1048643, 2, 0, 1179628, -1073741823, 0, 1179629, -1073741821, 0, 1179630, -1073741821, 0, 1179631, -1073741821, 0, 1179632, -1073741821, 0, 1179633, -1073741821, 0, 1179634, -1073741821, 0, 1179635, -1073741821, 0, 1179636, -1073741821, 0, 1179637, -1073741821, 0, 1179642, -1073741823, 0, 1179643, -1610612729, 0, 1179644, -1610612729, 0, 1179645, -1610612729, 0, 1179646, -1610612729, 0, 1179647, -1610612729, 0, 1114112, -1610612729, 0, 1114113, -1610612729, 0, 1114114, -1610612729, 0, 1114115, -1610612729, 0, 1114116, -1610612729, 0, 1114117, -1610612735, 0, 1114138, -1073741823, 0, 1114139, -1073741821, 0, 1114140, -1073741821, 0, 1114141, -1073741821, 0, 1114142, -1073741821, 0, 1114143, -1073741821, 0, 1114144, -1073741821, 0, 1114145, -1610612735, 0, 1114155, -1073741823, 0, 1114156, -1073741821, 0, 1114157, -1073741821, 0, 1114158, -1073741821, 0, 1114159, -1073741821, 0, 1114160, -1073741821, 0, 1114161, -1073741821, 0, 1114162, -1073741821, 0, 1114163, -1073741821, 0, 1114164, -1073741821, 0, 1114165, -1073741821, 0, 1114166, -1073741821, 0, 1114167, -1073741821, 0, 1114168, -1073741821, 0, 1114169, -1073741821, 0, 1114170, -1073741821, 0, 1114171, -1073741821, 0, 1114172, -1073741821, 0, 1114173, -1073741821, 0, 1114174, -1073741821, 0, 1114175, -1073741821, 0, 1114176, -1073741821, 0, 1114177, -1073741821, 0, 1114178, -1073741821, 0, 1114179, -1610612735, 0, 1245164, -1073741823, 0, 1245165, -1073741821, 0, 1245166, -1073741821, 0, 1245167, -1073741821, 0, 1245168, -1073741821, 0, 1245169, -1073741821, 0, 1245170, -1073741821, 0, 1245171, -1073741821, 0, 1245172, -1073741821, 0, 1245173, -1073741821, 0, 1245178, -1073741823, 0, 1245179, -1610612729, 0, 1245180, -1610612729, 0, 1245181, -1610612729, 0, 1245182, -1610612729, 0, 1245183, -1610612729, 0, 1179648, -1610612729, 0, 1179649, -1610612729, 0, 1179650, -1610612729, 0, 1179651, -1610612729, 0, 1179652, -1610612729, 0, 1179653, -1610612735, 0, 1179674, -1073741823, 0, 1179675, -1073741821, 0, 1179676, -1073741821, 0, 1179677, -1073741821, 0, 1179678, -1073741821, 0, 1179679, -1073741821, 0, 1179680, -1073741821, 0, 1179681, -1610612735, 0, 1179691, -1073741823, 0, 1179692, -1073741821, 0, 1179693, -1073741821, 0, 1179694, -1073741821, 0, 1179695, -1073741821, 0, 1179696, -1073741821, 0, 1179697, -1073741821, 0, 1179698, -1073741821, 0, 1179699, -1073741821, 0, 1179700, -1073741821, 0, 1179701, -1073741821, 0, 1179702, -1073741821, 0, 1179703, -1073741821, 0, 1179704, -1073741821, 0, 1179705, -1073741821, 0, 1179706, -1073741821, 0, 1179707, -1073741821, 0, 1179708, -1073741821, 0, 1179709, -1073741821, 0, 1179710, -1073741821, 0, 1179711, -1073741821, 0, 1179712, -1073741821, 0, 1179713, -1073741821, 0, 1179714, -1073741821, 0, 1179715, -1610612735, 0, 1310679, 6, 0, 1310680, 1, 0, 1310681, 1, 0, 1310682, 1, 0, 1310683, 1, 0, 1310684, 1, 0, 1310685, 1, 0, 1310686, 1, 0, 1310687, 1, 0, 1310688, 1, 0, 1310689, 1, 0, 1310690, 1, 0, 1310691, 1, 0, 1310692, 1, 0, 1310693, 1, 0, 1310694, 1, 0, 1310695, 1, 0, 1310696, 1, 0, 1310697, 1, 0, 1310698, 1, 0, 1310699, 1, 0, 1310700, -1073741820, 0, 1310701, -1073741821, 0, 1310702, -1073741821, 0, 1310703, -1073741821, 0, 1310704, -1073741821, 0, 1310705, -1073741821, 0, 1310706, -1073741821, 0, 1310707, -1073741821, 0, 1310708, -1073741821, 0, 1310709, -1073741821, 0, 1310714, -1073741823, 0, 1310715, -1610612729, 0, 1310716, -1610612729, 0, 1310717, -1610612729, 0, 1310718, -1610612729, 0, 1310719, -1610612729, 0, 1245184, -1610612729, 0, 1245185, -1610612729, 0, 1245186, -1610612729, 0, 1245187, -1610612729, 0, 1245188, -1610612729, 0, 1245189, -1610612735, 0, 1245210, -1073741823, 0, 1245211, -1073741821, 0, 1245212, -1073741821, 0, 1245213, -1073741821, 0, 1245214, -1073741821, 0, 1245215, -1073741821, 0, 1245216, -1073741821, 0, 1245217, -1610612735, 0, 1245227, -1073741823, 0, 1245228, -1073741821, 0, 1245229, -1073741821, 0, 1245230, -1073741821, 0, 1245231, -1073741821, 0, 1245232, -1073741821, 0, 1245233, -1073741821, 0, 1245234, -1073741821, 0, 1245235, -1073741821, 0, 1245236, -1073741821, 0, 1245237, -1073741821, 0, 1245238, -1073741821, 0, 1245239, -1073741821, 0, 1245240, -1073741821, 0, 1245241, -1073741821, 0, 1245242, -1073741821, 0, 1245243, -1073741821, 0, 1245244, -1073741821, 0, 1245245, -1073741821, 0, 1245246, -1073741821, 0, 1245247, -1073741821, 0, 1245248, -1073741821, 0, 1245249, -1073741821, 0, 1245250, -1073741821, 0, 1245251, -1610612735, 0, 1376215, -1073741823, 0, 1376216, -1073741821, 0, 1376217, -1073741821, 0, 1376218, -1073741821, 0, 1376219, -1073741821, 0, 1376220, -1073741821, 0, 1376221, -1073741821, 0, 1376222, -1073741821, 0, 1376223, -1073741821, 0, 1376224, -1073741821, 0, 1376225, -1073741821, 0, 1376226, -1073741821, 0, 1376227, -1073741821, 0, 1376228, -1073741821, 0, 1376229, -1073741821, 0, 1376230, -1073741821, 0, 1376231, -1073741821, 0, 1376232, -1073741821, 0, 1376233, -1073741821, 0, 1376234, -1073741821, 0, 1376235, -1073741821, 0, 1376236, -1073741821, 0, 1376237, -1073741821, 0, 1376238, -1073741821, 0, 1376239, -1073741821, 0, 1376240, -1073741821, 0, 1376241, -1073741821, 0, 1376242, -1073741821, 0, 1376243, -1073741821, 0, 1376244, -1073741821, 0, 1376245, -1073741821, 0, 1376250, -1073741823, 0, 1376251, -1610612729, 0, 1376252, -1610612729, 0, 1376253, -1610612729, 0, 1376254, -1610612729, 0, 1376255, -1610612729, 0, 1310720, -1610612729, 0, 1310721, -1610612729, 0, 1310722, -1610612729, 0, 1310723, -1610612729, 0, 1310724, -1610612729, 0, 1310725, -1610612732, 0, 1310726, 1, 0, 1310727, 1, 0, 1310728, 1, 0, 1310729, 1, 0, 1310730, 1, 0, 1310731, 1, 0, 1310732, 1, 0, 1310733, 1, 0, 1310734, 1, 0, 1310735, 1, 0, 1310736, 1, 0, 1310737, 1, 0, 1310738, 1, 0, 1310739, 1, 0, 1310740, 1, 0, 1310741, 1, 0, 1310742, 1, 0, 1310743, 1, 0, 1310744, 1, 0, 1310745, 1, 0, 1310746, 4, 0, 1310747, -1073741821, 0, 1310748, -1073741821, 0, 1310749, -1073741821, 0, 1310750, -1073741821, 0, 1310751, -1073741821, 0, 1310752, -1073741821, 0, 1310753, -1610612735, 0, 1310763, -1073741823, 0, 1310764, -1073741821, 0, 1310765, -1073741821, 0, 1310766, -1073741821, 0, 1310767, -1073741821, 0, 1310768, -1073741821, 0, 1310769, -1073741821, 0, 1310770, -1073741821, 0, 1310771, -1073741821, 0, 1310772, -1073741821, 0, 1310773, -1073741821, 0, 1310774, -1073741821, 0, 1310775, -1073741821, 0, 1310776, -1073741821, 0, 1310777, -1073741821, 0, 1310778, -1073741821, 0, 1310779, -1073741821, 0, 1310780, -1073741821, 0, 1310781, -1073741821, 0, 1310782, -1073741821, 0, 1310783, -1073741821, 0, 1310784, -1073741821, 0, 1310785, -1073741821, 0, 1310786, -1073741821, 0, 1310787, -1610612735, 0 )

[node name="Monstro" parent="." instance=ExtResource( 9 )]
position = Vector2( -124, 478 )

[node name="Monstro2" parent="." instance=ExtResource( 9 )]
position = Vector2( 221, 418 )

[node name="Monstro3" parent="." instance=ExtResource( 9 )]
position = Vector2( 975, 479 )

[node name="Monstro4" parent="." instance=ExtResource( 9 )]
position = Vector2( 1654, 481 )

[node name="blocoFx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 0.619

[node name="Area2D" parent="." instance=ExtResource( 12 )]
position = Vector2( 2072, 410 )

[node name="pomodoro" parent="." instance=ExtResource( 10 )]

[connection signal="body_entered" from="Bloco_Tomate/Area2D" to="." method="_on_Area2D_body_entered"]
